# clipify-app

./: .env  .env.development  .env.production  ENVIRONMENT.md  GEMINI.md  OAUTH_TESTING_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TOKEN_REFRESH_ENHANCED.md  WINDOWS_DEEPLINK_TESTING.md  deisgn.md  package-lock.json  package.json  test-accessibility.sh  test-deep-link.sh  test-logging.js  test-simple.js  test-windows-deeplinks.ps1  test-windows-functionality.bat  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: build-windows-fixed.yml  build-windows-signed.yml  build-windows.yml  release.yml
.qoder/quests/: model-tone-selector.md
.trae/rules/: project_rules.md
.windsurf/rules/: tauri-react.md
coverage/: coverage-final.json  index.html
coverage/scripts/: index.html  validate-production-deployment.js.html
coverage/src/: App.tsx.html  (+2 more)
docs/: HotkeyFlow.md  WINDOWS_BUILD_FIXES.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_TROUBLESHOOTING.md  authentication-flow.md
public/: auth-debug.html  deep-link-test.html
scripts/: build-windows-prod.sh  validate-production-deployment.js
src/: App.css  App.tsx  App.tsx.backup  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  main.wxs  tauri.conf.json  tauri.dev.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json  dev-api.json  external-api.json  windows.json
src-tauri/coverage/: tarpaulin-report.html
src-tauri/src/: clipboard.rs  clipboard_commands.rs  clipboard_monitor.rs  config.rs  lib.rs  main.rs  system.rs  window.rs
(+133 files in other folders)
